create github pages

--- a/tnc.html
+++ b/tnc.html
@@ -38,7 +38,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="content10 mbr-section article cid-rzACrv0KIz" id="content10-b">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="content10 mbr-section article cid-rzACrv0KIz" id="content10-b">
 
      
     <div class="container">
@@ -66,7 +66,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
     <div class="mbr-container">
         <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="join.html">Accept</a>
-            <a class="btn btn-black-outline display-4" href="http://www.google.com">Decline</a></div>
+            <a class="btn btn-black-outline display-4" href="exit.html">Decline</a></div>
     </div>
 </section>
 
