create github pages

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="Info4 cid-rzAx7GTCbX" id="info3-5">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="Info4 cid-rzAx7GTCbX" id="info3-5">
     
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
@@ -56,7 +56,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
                 <div class="form-block mbr-justify-content-center" data-form-type="formoid">
                     <h3 class="form-title mbr-fonts-style mbr-white mbr-light display-2">Subscribe Now</h3>
                     
-                    <form class="mbr-form mbr-justify-content-center" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zjIcrlrqLBJrw1eeZHLyqEjMZdhH2DjA83SaogbyTnerR6uqEvP2WygzA1WdHhkr0wSMpvc+auVuxiRAr8yUZy1ikdHV7HA1WTY/pKmm5GSKvt14lrBXAzQ4qVYk7kib">
+                    <form class="mbr-form mbr-justify-content-center" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hNfVFMZq22jtNJIq41i3hoOgqf81GcqGuN5DcmEhe7djcEIBHgd4kdzOVLAqizHe1g1kiHgRJljjHXISIMvr+/Ht4Pi0hNdBHzj1qhtUs55xjXJXSvYH6LR/EKsJhZjr">
                         <div submit-success="">
                             <template data-form-alert="" type="amp-mustache">Subscription successful !</template>
                         </div>
