create github pages

--- a/tnc.html
+++ b/tnc.html
@@ -38,7 +38,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="content10 mbr-section article cid-rzACrv0KIz" id="content10-b">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="content10 mbr-section article cid-rzACrv0KIz" id="content10-b">
 
      
     <div class="container">
