create github pages

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="Info4 cid-rzAx7GTCbX" id="info3-5">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="Info4 cid-rzAx7GTCbX" id="info3-5">
     
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
@@ -61,7 +61,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
                 <div class="form-block mbr-justify-content-center" data-form-type="formoid">
                     <h3 class="form-title mbr-fonts-style mbr-white mbr-light display-2">Subscribe Now</h3>
                     
-                    <form class="mbr-form mbr-justify-content-center" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QQ4IRhCdBKjSWyKFk16lo0SsB1yM8+p2K6qqtWKCgsBcZjpH8ImEJ1weMkzof8vZOvmj4hutPFeMQwD2Yz0ZvOsgjR34kece2D4NJ9PDrCU2/tY8WQ154+Jq9Ol7W5RS">
+                    <form class="mbr-form mbr-justify-content-center" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XtG91ObH8VkJSo2kgyw2ucr/faDmMhK4Oym4vBZ6pWKIol74e01RQ0q4/8ymsJNYOb31hHlexmTJk+GN87HZ9VAmk5XXKhojNpkKOzz86oJvECqdLOhI41vrfybdMVku">
                         <div submit-success="">
                             <template data-form-alert="" type="amp-mustache">Subscription successful !</template>
                         </div>
