--- a/tnc.html
+++ b/tnc.html
@@ -40,7 +40,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="content10 mbr-section article cid-rzACrv0KIz" id="content10-b">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="content10 mbr-section article cid-rzACrv0KIz" id="content10-b">
 
      
     <div class="container">
@@ -89,7 +89,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
                 <h3 class="mbr-section-subtitle align-right mbr-fonts-style mbr-light display-7">නියමයන් හා කොන්දේසි හෝ වෙනත් යමක් සම්බන්ධව ගැටළුවක් තිබේනම් අපගේ නියෝජිතයෙකු හා සම්බන්ධ වන්න.</h3>
             </div>
             <div class="btn-container mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
-                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="tel:+94775426631">Contact Admin</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-black display-4" href="https://wa.me/+94775426631">Contact Admin</a></div>
             </div>
         </div>
     </div>
