--- a/tnc.html
+++ b/tnc.html
@@ -40,7 +40,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="content10 mbr-section article cid-rzACrv0KIz" id="content10-b">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="content10 mbr-section article cid-rzACrv0KIz" id="content10-b">
 
      
     <div class="container">
@@ -107,7 +107,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
                 <h3 class="mbr-section-subtitle align-right mbr-fonts-style mbr-light display-5">බාගත කර ගන්න</h3>
             </div>
             <div class="btn-container mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
-                <div class="mbr-section-btn align-center"><a class="btn btn-black-outline display-4" href="http://www.whatsapp.com"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 32 32" fill="currentColor">
+                <div class="mbr-section-btn align-center"><a class="btn btn-black-outline display-4" href="http://www.whatsapp.com/dl"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 32 32" fill="currentColor">
 
 <path d="M17.138 16.196c-0.26-0.26-0.681-0.26-0.941 0l-3.995 3.995c-0.6 0.6 0.32 1.563 0.941 0.941l3.524-3.524 3.523 3.522c0.614 0.614 1.55-0.35 0.941-0.941zM16.667 20c0.369 0 0.667 0.297 0.667 0.667v6.667c0 0.369-0.297 0.667-0.667 0.667s-0.667-0.297-0.667-0.667v-6.667c0-0.369 0.297-0.667 0.667-0.667zM17.766 4.003c-1.766 0-3.411 0.337-4.94 1.096-1.922 0.954-3.482 2.355-4.51 4.237-2.194-0.089-4.399 0.85-5.961 2.401-1.667 1.656-2.537 4.042-2.323 6.382 0.17 1.851 1.004 3.62 2.323 4.929s3.113 2.285 4.95 2.286h1.362c0.369 0 0.667-0.297 0.667-0.667s-0.297-0.667-0.667-0.667h-1.268c-1.528-0.132-3.019-0.82-4.107-1.901-1.091-1.083-1.792-2.571-1.932-4.101-0.176-1.927 0.559-3.951 1.932-5.314s3.402-2.205 5.328-2.015c0.275 0.027 0.538-0.083 0.661-0.331 0.883-1.771 2.365-3.166 4.138-4.046 1.329-0.66 2.82-0.956 4.315-0.956 0.495 0 0.992 0.067 1.479 0.159 2.213 0.418 4.27 1.692 5.627 3.489s2.021 4.108 1.818 6.351c-0.030 0.339 0.2 0.6 0.534 0.667 1.020 0.201 1.977 0.865 2.604 1.695s0.942 1.915 0.857 2.95c-0.044 0.533-0.194 1.054-0.443 1.51-0.248 0.454-0.603 0.852-1.026 1.143s-0.929 0.49-1.461 0.591c-0.532 0.101-1.107 0.109-1.724 0.109h-1.333c-0.369 0-0.667 0.297-0.667 0.667s0.297 0.667 0.667 0.667h1.333c0.626-0 1.286-0.004 1.974-0.135s1.367-0.387 1.966-0.799c0.6-0.413 1.095-0.965 1.443-1.601 0.346-0.634 0.541-1.336 0.599-2.041 0.113-1.374-0.292-2.763-1.122-3.862-0.724-0.959-1.712-1.6-2.859-1.942 0.094-2.412-0.639-4.841-2.096-6.77-1.563-2.069-3.897-3.518-6.445-4-0.558-0.106-1.124-0.18-1.693-0.18z"></path>
 </svg></span>Download</a></div>
