create github pages

--- a/exit.html
+++ b/exit.html
@@ -38,7 +38,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
             <strong>Good Bye</strong></h1>
         
         
-        <div class="mbr-section-btn align-right"><a class="btn btn-md btn-primary display-4" href="http://www.google.com"><span class="mbri-logout mbr-iconfont mbr-iconfont-btn"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 32 32" fill="currentColor">
+        <div class="mbr-section-btn align-right"><a class="btn btn-md btn-black-outline display-4" href="http://www.google.com"><span class="mbri-logout mbr-iconfont mbr-iconfont-btn"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 32 32" fill="currentColor">
 
 <path d="M6 21.333c0.594 0 0.874-0.735 0.471-1.138l-4.862-4.862 4.862-4.862c0.596-0.572-0.381-1.528-0.943-0.943l-5.333 5.333c-0.26 0.26-0.26 0.682 0 0.943l5.333 5.333c0.126 0.13 0.291 0.195 0.471 0.195zM18 16h-13.333c-0.369 0-0.667-0.297-0.667-0.667s0.297-0.667 0.667-0.667h13.333c0.369 0 0.667 0.297 0.667 0.667s-0.297 0.667-0.667 0.667zM10 0c-1.096 0-2 0.904-2 2v6.667c0 0.886 1.333 0.876 1.333 0v-6.667c0-0.381 0.286-0.667 0.667-0.667h20c0.381 0 0.667 0.286 0.667 0.667v28c0 0.381-0.286 0.667-0.667 0.667h-20c-0.381 0-0.667-0.286-0.667-0.667v-8c0-0.891-1.333-0.87-1.333 0v8c0 1.096 0.904 2 2 2h20c1.096 0 2-0.904 2-2v-28c0-1.096-0.904-2-2-2z"></path>
 </svg></span>
@@ -50,6 +50,6 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
   
   
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section> 
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section> 
   <button id="scrollToTopButton" on="tap:top-page.scrollTo(duration=200)">                                         <a class="scroll-to-top-arrow"></a>                                     </button></body>
 </html>
