--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="Info4 cid-rzAx7GTCbX" id="info3-5">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="Info4 cid-rzAx7GTCbX" id="info3-5">
     
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
@@ -61,7 +61,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
                 <div class="form-block mbr-justify-content-center" data-form-type="formoid">
                     <h3 class="form-title mbr-fonts-style mbr-white mbr-light display-2">Subscribe Now</h3>
                     
-                    <form class="mbr-form mbr-justify-content-center" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eKQ40pzh307ko04DrXoqbcBsBrEbHKr8SKHCCCzjgT9N/cx0xy49ktWH/93jKjwjiwVZTGUhaIZXQr9rv2d0qJWgEa6ndkHHObm1VlcHR6VNtf4d8hBJ5I7J3djbQO2C">
+                    <form class="mbr-form mbr-justify-content-center" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="M1qjCwgSCn3aGcFgG4FuvMf2Lvdw9nR0vjC9UdoA1aATZBHrNbsOxH7WjQlUkv7XBE4FD1I9yeXXFVgyoqDMMAL+3E1kh+sBQMP6NXNygFzH/k9gbRhbBbcvHAwWB+dm">
                         <div submit-success="">
                             <template data-form-alert="" type="amp-mustache">Subscription successful !</template>
                         </div>
